# python-pkg-template

./: 404.html  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: deploy-mkdocs.yml  python-package.yml
docs/: README.md  index.md  mkdocs.yml  requirements.txt
docs/python-pkg-tmpl/: index.md
reference/SUMMARY/: index.html
reference/python_pkg_tmpl/: index.html
reference/python_pkg_tmpl/tmpl_module/: index.html
search/: search_index.json
src/python_pkg_tmpl/: tmpl_module.py
tests/: test_tmpl_module.py
