[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python_pkg_tmpl"
version = "0.0.1"
authors = [
    { name="SECORO AG", email="secoro@groups.uni-bremen.de" }
]
description = """
A template Python package.
"""
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
  "platformdirs",
]
[project.optional-dependencies]
test = [
  "pytest",
]
docs = [
  "pathlib",                      # API generation script
  "mkdocs-material",              # material theme
  "mkdocs-awesome-pages-plugin",  # allow short hands for loading all markdowns
  "mkdocstrings[python]",         # render API pages for Python
  "mkdocs-literate-nav",          # summary API page
  "mkdocs-gen-files",             # generate API files
  "mkdocs-section-index",         # generate index for API
]
[project.urls]
"Homepage" = "https://github.com/secorolab/python-pkg-template"

[tool.ruff]
line-length = 100
